[package]
name = "kitchen"
version = "0.1.0"
authors = ["Joshua Ji <joshuanianji@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for single-file Rust programs"
readme = "README.md"
repository = "https://github.com/joshuanianji/kitchen"
homepage = "https://github.com/joshuanianji/kitchen"
edition = "2018"
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"